--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": "^8.0|^7.3",
         "laravel/nova": "^3.0",
-        "laravel/passport": "^10.3"
+        "laravel/passport": "^10.3 || ^11.0"
     },
     "repositories": [
         {
